# local-data-masker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: adaptive-masking-plan.md  cloud-ai-workflow.md  integration-as-preprocessor.md
docs/superpowers/plans/: 2026-06-25-filename-path-masking.md
docs/superpowers/specs/: 2026-06-25-filename-path-masking-design.md
examples/: sample_courses.csv  sample_input.csv
profiles/: default.yaml  health_records.yaml
src/local_data_masker/: __init__.py  cli.py  pipeline.py
src/local_data_masker/detectors/: custom_rules.py  regex_detector.py
src/local_data_masker/exporters/: report_exporter.py  table_exporter.py
src/local_data_masker/extractors/: table_extractor.py
src/local_data_masker/maskers/: entity_masker.py  faker_provider.py  mapping_store.py  path_masker.py  replacer.py  semantic_replacer.py
tests/: test_cli.py  test_entity_masking.py  test_faker_provider.py  test_mapping_store.py  test_path_masker.py  test_pipeline.py  test_profiles.py  test_regex_detector.py  test_replacer.py  test_table_extractor_exporter.py
